--- a/web/src/global-styles/_colors.scss
+++ b/web/src/global-styles/_colors.scss
@@ -28,6 +28,6 @@ $color-light-text-1: #2b3750;
 $color-light-text-2: #6078a9;
 $color-light-text-3: rgba(57, 73, 106, 0.5);
 $color-light-text-4: white;
-$color-light-text-5: #0e121b;
+$color-light-text-5: #07090d;
 
 $color-light-border: #cad2e2;
