--- a/web/src/search2/_SearchButton.scss
+++ b/web/src/search2/_SearchButton.scss
@@ -1,14 +1,6 @@
 .search-button2 {
     display: flex;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    border-color: transparent;
-    background-color: #1c7cd6;
-    border: none;
-    border-radius: 0.15rem;
-    color: white;
-    cursor: pointer;
-    white-space: nowrap;
+    padding: 0 0.5rem;
 
     &__label {
         margin-left: 0.25rem;
@@ -17,16 +9,6 @@
     @media (max-width: $media-sm) {
         &__label {
             display: none;
-        }
-    }
-}
-
-.theme-light {
-    .search-button2 {
-        background-color: $color-primary;
-
-        &:hover {
-            background-color: $color-primary-hover;
         }
     }
 }
