show timedout notice on search results page - fixes #8251
![image](https://user-images.githubusercontent.com/1976/33514714-bd841d78-d70d-11e7-88f5-117e1e97a03f.png)

--- a/web/src/search2/_SearchResults.scss
+++ b/web/src/search2/_SearchResults.scss
@@ -13,9 +13,15 @@
     }
 
     &__header {
+        display: flex;
+        justify-content: space-between;
         color: #93a9c8;
         padding-bottom: 0.5rem;
-        text-align: right;
+
+        &-notice {
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
