--- a/web/src/global-styles/_colors.scss
+++ b/web/src/global-styles/_colors.scss
@@ -5,7 +5,7 @@ It should be imported into app.scss
 
 // Dark Theme
 
-$color-page-background: #233043;
+$color-page-background: #151c28;
 $color-text: #c9d4e3;
 $color-secondary: #93a9c8;
 $color-success: #0ca678;
