--- a/web/src/search2/_SearchNavbarItem.scss
+++ b/web/src/search2/_SearchNavbarItem.scss
@@ -11,16 +11,13 @@
         }
     }
 
-    .query-input2__input {
-        padding: 0.02rem 0.4rem;
+    .query-input2__input,
+    .search-scope2__select {
+        @extend .form-control-sm;
     }
 
     .search-button2__label {
         display: none;
-    }
-
-    .search-scope2__select {
-        padding: 0.2rem 0.25rem;
     }
 
     .scope-label2:hover {
