--- a/web/src/search2/_SavedQueryForm.scss
+++ b/web/src/search2/_SavedQueryForm.scss
@@ -11,10 +11,8 @@
         }
     }
 
-    .ui-text-box {
-        &:not(:first-child) {
-            margin-top: 0.5rem;
-        }
+    .form-control:not(:first-child) {
+        margin-top: 0.5rem;
     }
 
     &__button {
@@ -38,7 +36,7 @@
             }
         }
 
-        .ui-text-box {
+        .form-control {
             background: $color-light-bg-1;
         }
     }
