WIP web: Optionally render markdown files (#8247)
* web: Optionally render markdown files

* web: use extendable markdown styles for content rendering

* web: remove breaks from rendered Markdown (they are really bad, e.g. in golang/go CONTRIBUTORS.md)

* web: render border under markdown headings; display bullet/numeric lists correctly

* web: do not overflow markdown content; adding nice padding

* web: use table display instead of inline so that headings one after another work correctly

* web: use rem for margin

* web: make default viewing mode "rich"; invert icons so that open eye is button for viewing source

* vendor: add github.com/shurcooL/github_flavored_markdown

* vendor: add github_flavored_markdown dependencies

* move Markdown rendering to backend

* web: minor markdown style cleanup

* web: correct Markdown table rendering style

* web: add light theme for markdown

* all: also render comments Markdown on the backend

* web: put markdown styling into single component instead of using scss extends functionality

* backend: rename "markdown" to "richHTML"

* web: rename "markdown" to "richHTML"; address other feedback

* web: display Markdown `code` blocks correctly inline

* govendor add github.com/russross/blackfriday

* govendor add github.com/sergi/go-diff/diffmatchpatch

* go generate ./cmd/frontend/internal/graphqlbackend

* fix lint errors

* fix stylelint errors

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -320,6 +320,7 @@ body {
     }
 }
 
+@import './highlight';
 @import './search2/QueryButton';
 @import './search2/SavedQueries';
 @import './search2/SearchNavbarItem';
@@ -343,6 +344,7 @@ body {
 @import './components/CodeExcerpt';
 @import './components/DecoratedTextLines';
 @import './components/HeroPage';
+@import './components/Markdown';
 @import './settings/SettingsPage';
 @import './comments/CommentsPage';
 @import './open/OpenPage';
