--- a/web/src/repo/_Repository.scss
+++ b/web/src/repo/_Repository.scss
@@ -86,6 +86,11 @@
     &__blob-placeholder {
         flex: 1 1 50%;
     }
+
+    &__rich-content {
+        overflow: auto;
+        padding: 3rem;
+    }
 }
 
 .theme-light {
