allow users to manually copy and send org invite links - fixes #8317
When a user sets up a server, they may not yet have configured an email server or auth.userOrgMap but we still want them to be able to try out orgs. This lets those users invite other users into an org even without those.

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -304,9 +304,21 @@ body {
 
 .theme-light {
     .alert {
+        &-success {
+            background: rgba(43, 138, 62, 0.85);
+        }
+
         &-danger {
             background: rgba(201, 42, 42, 0.75);
             color: #f2f4f8;
+        }
+
+        a {
+            color: #f2f4f8;
+
+            &:hover {
+                color: $color-light-text-4;
+            }
         }
     }
 }
