--- a/web/src/settings/org/_Org.scss
+++ b/web/src/settings/org/_Org.scss
@@ -17,9 +17,7 @@
     }
 
     &__header {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        margin-bottom: 2.5rem;
     }
 
     &__table {
