Fix alert link hover style in light theme

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -311,6 +311,16 @@ body {
             color: white;
         }
     }
+
+    .btn-icon {
+        &:hover,
+        &:focus {
+            &,
+            .theme-light & {
+                color: white;
+            }
+        }
+    }
 }
 
 .theme-light {
