--- a/web/src/search2/_SearchPage.scss
+++ b/web/src/search2/_SearchPage.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: flex-start;
     width: 100%;
+    overflow: auto;
 
     &__logo {
         flex: 0 0 auto;
