use textarea for showing and editing org/user settings JSON
Removes a lot of complexity caused by the need to propagate isLightTheme deeply
because we needed to syntax-highlight the settings JSON.

--- a/web/src/global-styles/_type.scss
+++ b/web/src/global-styles/_type.scss
@@ -28,7 +28,7 @@ small {
 
 a {
     &,
-    &:not([href]):not([tabindex]) {
+    &:not([href]):not([tabindex]):not([disabled]) {
         outline: 0;
         color: #93a9c8;
         text-decoration: none;
