extract styles and update text

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -345,6 +345,7 @@ body {
 @import './search/SearchScope';
 @import './search/ScopeLabel';
 @import './search/SearchButton';
+@import './settings/InitializePage';
 @import './tree/Tree';
 @import './nav/Navbar';
 @import './nav/NavLinks';
