add basic /site-admin area

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -346,6 +346,7 @@ body {
 @import './search/ScopeLabel';
 @import './search/SearchButton';
 @import './settings/InitializePage';
+@import './site-admin/SiteAdmin';
 @import './tree/Tree';
 @import './nav/Navbar';
 @import './nav/NavLinks';
