add content to site admin "Overview" page

--- a/web/src/site-admin/_SiteAdmin.scss
+++ b/web/src/site-admin/_SiteAdmin.scss
@@ -1,5 +1,6 @@
 @import './ConfigurationPage';
 @import './OrgsPage';
+@import './OverviewPage';
 @import './RepositoriesPage';
 @import './Sidebar';
 @import './UsersPage';
