set row height to avoid jitter while populating row, fixes #8425 (#8579)
set row height to avoid jitter while populating row, fixes #8425

--- a/web/src/repo/_DirectoryPage.scss
+++ b/web/src/repo/_DirectoryPage.scss
@@ -29,6 +29,10 @@
         border: none !important;
     }
 
+    &__row {
+        height: 2.5rem;
+    }
+
     &__commit-message-cell {
         color: $color-secondary;
         opacity: 0.75;
