improve styling/html of alerts

--- a/web/src/site-admin/_ConfigurationPage.scss
+++ b/web/src/site-admin/_ConfigurationPage.scss
@@ -3,7 +3,10 @@
         margin-top: 2rem;
     }
 
-    &__enable-editing {
-        cursor: pointer;
+    &__alert {
+        margin: 1rem 0;
+        p:last-child {
+            margin-bottom: 0;
+        }
     }
 }
