oops: import SaveToolbar SCSS

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -369,6 +369,7 @@ body {
 @import './repo/RepoBrowser';
 @import './repo/Tooltips';
 @import './references/ReferencesWidget';
+@import './components/SaveToolbar';
 @import './components/CodeExcerpt';
 @import './components/DecoratedTextLines';
 @import './components/HeroPage';
