--- a/web/src/site-admin/_ConfigurationPage.scss
+++ b/web/src/site-admin/_ConfigurationPage.scss
@@ -3,13 +3,8 @@
         margin-top: 1rem;
     }
 
-    &__alerts {
-        // Minimize jitter when new alerts suddenly become visible.
-        min-height: 4rem;
-    }
-
     &__alert {
-        margin-top: 0.5rem;
+        margin: 0.5rem 0 1rem;
         p:last-child {
             margin-bottom: 0;
         }
@@ -19,5 +14,14 @@
             align-items: center;
             justify-content: space-between;
         }
+    }
+
+    &__editor-actions {
+        display: flex;
+        margin-bottom: 0.5rem;
+    }
+
+    &__editor-action {
+        margin-right: 0.5rem;
     }
 }
