separate signin and signup into 2 separate components
This is so that the signup component can be more easily reused in the site init process (when the admin has just set up a new server).

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -363,6 +363,7 @@ body {
 @import './nav/NavLinks';
 @import './auth/PasswordResetPage';
 @import './auth/SignInPage';
+@import './auth/SignUpPage';
 @import './auth/LicensePage';
 @import './repo/GitRefTag';
 @import './repo/Repository';
