--- a/web/src/auth/_SignInPage.scss
+++ b/web/src/auth/_SignInPage.scss
@@ -1,53 +1,1 @@
-.sign-in-page {
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
-
-    &__terms {
-        a:not(:hover) {
-            color: $color-primary;
-        }
-
-        margin-top: 1rem;
-    }
-}
-
-.login-signup-form {
-    width: 18rem;
-    max-width: calc(100vw - 2rem);
-
-    &__mode {
-        margin-bottom: 1rem;
-        font-size: inherit;
-        cursor: pointer;
-    }
-
-    &__error {
-        color: $color-error;
-    }
-
-    &__loader {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-}
-
-.theme-light {
-    .login-signup-form {
-        &__mode {
-            &:hover {
-                color: $color-light-text-5;
-                text-decoration: underline;
-            }
-
-            &--active {
-                color: $color-light-text-2;
-            }
-        }
-    }
-}
+@import './SignInSignUpPageCommon';
