show create-admin-account form on server init and actually create 1st account
Previously, the server init page just initialized the server and did not actually create a
user account on the instance. Now that we have native auth, we can make it create an account.

--- a/web/src/site-admin/_InitPage.scss
+++ b/web/src/site-admin/_InitPage.scss
@@ -14,6 +14,7 @@
     }
 
     &__logo {
+        width: 100%;
         padding-bottom: 2rem;
     }
 
@@ -21,8 +22,17 @@
         margin-bottom: 1rem;
     }
 
-    &__input-email {
+    .signin-signup-form {
+        width: 100%;
+        max-width: inherit;
+    }
+
+    .signin-signup-form__input {
         display: block;
+    }
+
+    .form-group:last-child {
+        margin-bottom: 0;
     }
 
     &__label {
