--- a/web/src/site-admin/_DetailList.scss
+++ b/web/src/site-admin/_DetailList.scss
@@ -6,7 +6,6 @@
 
     &__item {
         display: flex;
-        align-items: baseline;
         min-height: 3rem;
         padding: 0.5rem 0;
         border-color: #2a3a51;
@@ -27,6 +26,7 @@
         flex: 1;
         list-style-type: none;
         color: $color-secondary;
+        padding-right: 0.5rem;
 
         @extend small;
     }
@@ -37,6 +37,10 @@
 
     &__display-name {
         opacity: 0.7;
+    }
+
+    &__error {
+        color: $color-error;
     }
 }
 
