fetch user settings locally instead of in global auth currentUser GraphQL query

--- a/web/src/settings/_SettingsFile.scss
+++ b/web/src/settings/_SettingsFile.scss
@@ -4,6 +4,10 @@
     width: 100%;
     margin-top: 2.5rem;
     line-height: 120%;
+
+    &__error {
+        color: $color-error;
+    }
 }
 
 .settings-file {
