add basic site admin telemetry page

--- a/web/src/site-admin/_SiteAdmin.scss
+++ b/web/src/site-admin/_SiteAdmin.scss
@@ -3,6 +3,7 @@
 @import './OverviewPage';
 @import './RepositoriesPage';
 @import './Sidebar';
+@import './TelemetryPage';
 @import './UsersPage';
 
 .site-admin-area {
