--- a/web/src/site-admin/_SiteAdmin.scss
+++ b/web/src/site-admin/_SiteAdmin.scss
@@ -12,7 +12,6 @@
     margin-top: 1rem;
     line-height: 1.5rem;
     overflow: hidden;
-    border-radius: 0.25rem;
 
     &__content {
         flex: 1 1 auto;
@@ -29,5 +28,17 @@
         &__content {
             background-color: inherit;
         }
+    }
+}
+
+@media (max-width: $media-lg) {
+    .site-admin-area {
+        border-width: 1px 0 0 0 !important;
+    }
+}
+
+@media (min-width: $media-lg) {
+    .site-admin-area {
+        border-radius: 0.25rem;
     }
 }
