--- a/web/src/site-admin/_SiteAdminRepositoriesPage.scss
+++ b/web/src/site-admin/_SiteAdminRepositoriesPage.scss
@@ -1,6 +1,6 @@
 @import './DetailList';
 
-.site-admin-repos-page {
+.site-admin-repositories-page {
     &__repo {
         display: block !important;
     }
