--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -356,7 +356,7 @@ body {
 @import './search/SearchScope';
 @import './search/ScopeLabel';
 @import './search/SearchButton';
-@import './site-admin/InitPage';
+@import './site-admin/SiteInitPage';
 @import './site-admin/SiteAdmin';
 @import './tree/Tree';
 @import './nav/Navbar';
