support inviting users (by site admin)

--- a/web/src/site-admin/_SiteAdmin.scss
+++ b/web/src/site-admin/_SiteAdmin.scss
@@ -1,5 +1,6 @@
 @import './SiteAdminAllUsersPage';
 @import './SiteAdminConfigurationPage';
+@import './SiteAdminInviteUserPage';
 @import './SiteAdminOrgsPage';
 @import './SiteAdminOverviewPage';
 @import './SiteAdminRepositoriesPage';
