--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -347,6 +347,14 @@ body {
     }
 }
 
+hr {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    background-color: #93a9c8;
+    height: 0.0625rem;
+    border: none;
+}
+
 @import './search/QueryButton';
 @import './search/SavedQueries';
 @import './search/SearchNavbarItem';
