--- a/web/src/site-admin/_DetailList.scss
+++ b/web/src/site-admin/_DetailList.scss
@@ -39,6 +39,12 @@
         opacity: 0.7;
     }
 
+    &__actions {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
     &__error {
         color: $color-error;
     }
