--- a/client/branded/src/global-styles/index.scss
+++ b/client/branded/src/global-styles/index.scss
@@ -1,5 +1,6 @@
 @import './colors.scss';
 @import './border-radius.scss';
+@import './transitions.scss';
 
 // Bootstrap configuration before Bootstrap is imported
 $border-radius: var(--border-radius);
@@ -95,10 +96,10 @@ $hr-border-color: var(--border-color);
 $hr-margin-y: 0.25rem;
 
 // Disable transitions
-$btn-transition: none;
 $input-transition: none;
-$badge-transition: none;
 $custom-forms-transition: none;
+$btn-transition: var(--btn-transition);
+$badge-transition: none; // Disable default badge transition, we only want to apply this when badges are links
 
 // './breakpoints' defines $grid-breakpoints for global CSS and exposes breakpoints mixins to CSS modules
 @import './breakpoints';
